<resources>
    <string name="app_name">ProPoints Notes</string>
    <string name="title_activity_pro_points_notes">ProPoints Notes</string>
    <string name="pontos_de_hoje">Pontos de Hoje</string>
    <string name="_19_12_2018">28/12/2018</string>
    <string name="pontos_do_dia">Informações do dia</string>
    <string name="pontos_restantes">cadastre os dados no ícone de configuração</string>
    <string name="_40">Cota não calculada!</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="settings">Settings</string>
    <string name="cota_di_ria_de_pontos">Cota diária de pontos</string>
    <string name="nome_do_perfil">Nome do Perfil</string>
    <string name="calcular">CALCULAR</string>
    <string name="peso_em_kg">Peso (kg)</string>
    <string name="altura_em_cm">Altura (cm)</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_seu_peso">Digite seu peso</string>
    <string name="digite_sua_altura">Digite sua altura</string>
    <string name="n_o_calculada">Não calculada</string>
    <string name="idade">Idade</string>
    <string name="mulher">Feminino</string>
    <string name="homem">Masculino</string>
    <string name="g_nero">Gênero</string>
    <string name="ltima_vez_salvo_nunca">Última vez salvo: Nunca</string>
    <string name="registros_do_dia">Registros do dia</string>
    <string name="title_activity_calculator">Calculadora de pontos</string>
    <string name="carboidratos_g">Carboidratos (g)</string>
    <string name="prote_nas_g">Proteínas (g)</string>
    <string name="gorduras_totais_g">Gorduras totais (g)</string>
    <string name="fibra_alimentar_g">Fibra alimentar (g)</string>
    <string name="n_o_calculado">Não calculado</string>
    <string name="unidade">Unidade</string>
    <string name="quantidade">Quantidade</string>
    <string name="_1">1</string>
    <string name="tipo">Tipo</string>
    <string name="title_activity_add_registry">Adicionar registro</string>
    <string name="nome_da_comida">Nome do alimento</string>
    <string name="x">x</string>
    <string name="name">Name</string>
    <string name="propoints">ProPoints</string>
    <string name="registrar_para_a_data">Registrar para a data</string>
    <string name="title_activity_food_list">Lista de alimentos</string>
    <string name="title_activity_add_food">Adicionar alimento</string>
</resources>
